network/subnets.tf
resource "azurerm_subnet" "web" {
  name                 = "web-tier-subnet"
  resource_group_name  = azurerm_resource_group.main.name
  virtual_network_name = azurerm_virtual_network.main.name
  address_prefixes     = ["10.0.1.0/24"]
}
